--- a/styles/products.css
+++ b/styles/products.css
@@ -8,7 +8,7 @@
     @apply px-5 py-3 mt-4 space-y-5 md:space-y-0 md:grid md:grid-cols-3 md:gap-5 lg:grid-cols-4;
   }
   .product_card__container {
-    @apply flex flex-col bg-gray-50 border border-gray-100 shadow-sm hover:shadow-lg min-h-[20rem] py-5 cursor-pointer;
+    @apply flex flex-col bg-gray-50 border border-gray-200 hover:bg-white shadow-sm hover:shadow-lg min-h-[20rem] py-5 rounded-md cursor-pointer;
   }
   .product_card__header {
     @apply text-center text-lg sm:text-left font-mono truncate p-3;
