--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,7 @@
     @apply h-5 text-gray-600;
   }
   .button {
-    @apply px-3 py-1 bg-gray-800 text-white rounded-sm font-mono;
+    @apply px-5 py-1 bg-gray-700 transition duration-500 ease-in-out hover:bg-gray-800 hover:shadow-lg text-white rounded-md font-mono;
   }
   .product__container {
     @apply px-3 py-3 md:ml-8 lg:ml-20 md:mt-14 lg:mt-20 space-y-10;
@@ -17,7 +17,7 @@
     @apply text-lg font-thin text-gray-800  leading-9;
   }
   .custom__button {
-    @apply px-10 py-2 bg-gray-50 border border-gray-700 font-mono text-sm hover:text-white hover:bg-gray-700 rounded-sm;
+    @apply px-10 py-2 hover:shadow-lg transition duration-500 ease-in-out bg-gray-50 border border-gray-700 font-mono text-sm hover:text-white hover:bg-gray-700 rounded-sm;
   }
   .collection__icon {
     @apply h-8 hover:text-white;
