--- a/styles/products.css
+++ b/styles/products.css
@@ -8,12 +8,12 @@
     @apply px-5 py-3 mt-4 space-y-5 md:space-y-0 md:grid md:grid-cols-3 md:gap-5 lg:grid-cols-4;
   }
   .product_card__container {
-    @apply flex flex-col bg-gray-50 border border-gray-200 hover:bg-white shadow-sm hover:shadow-lg min-h-[20rem] py-5 rounded-md cursor-pointer;
+    @apply flex flex-col transition duration-500 ease-in-out  bg-gray-50 border border-gray-200 hover:bg-white shadow-sm hover:shadow-xl min-h-[20rem] py-5 rounded-md cursor-pointer;
   }
   .product_card__header {
     @apply text-center text-lg sm:text-left font-mono truncate p-3;
   }
   .product_card__buttons {
-    @apply w-full px-5 text-sm rounded-md py-1 bg-gray-500  text-white font-mono;
+    @apply w-full px-5 text-sm rounded-lg bg-gray-600 group-hover:bg-gray-800 transition duration-500 ease-in-out outline-none border-gray-700 py-1 text-white font-mono;
   }
 }
